--- a/test/fixtures/records.yml
+++ b/test/fixtures/records.yml
@@ -3,11 +3,15 @@
 one:
   user_id: 1
   memo: MyString
-  image_url: MyString
-  written_date: MyString
+  image: MyString
+  date_id: MyString
+  date_data: 2018-01-16 07:07:30
+  user: one
 
 two:
   user_id: 1
   memo: MyString
-  image_url: MyString
-  written_date: MyString
+  image: MyString
+  date_id: MyString
+  date_data: 2018-01-16 07:07:30
+  user: two
